src/objects/TagDocumentAssociation__c.object
<CustomObject>
    <fields>
        <fullName>Document_Helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Helper</label>
        <referenceTo>Document_Helper__c</referenceTo>
        <relationshipLabel>TagDocumentAssociations</relationshipLabel>
        <relationshipName>TagDocumentAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>TagDocumentAssociations</relationshipLabel>
        <relationshipName>TagDocumentAssociations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>TagDocumentAssociations</relationshipLabel>
        <relationshipName>TagDocumentAssociations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TagDocumentAssociation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TDA-{0000000}</displayFormat>
        <label>TagDocumentAssociation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TagDocumentAssociations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>